[package]
name = "bluetooth-stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.37.0", features = ["full"]}
tao = "0.28"
tray-icon = "0.14.0"
image = "0.25"
futures = "0.3.30"
windows = {version = "0.56", features = ["Foundation_Collections", "Devices_Bluetooth", "Devices_Bluetooth_Rfcomm", "Networking_Sockets", "Storage_Streams", "Devices_Enumeration"]}
chrono = "0.4"
